--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <script type="text/javascript" src="javascripts/virtualJoystick.js"></script>
         <script src="javascripts/jquery-1.11.2.min.js"></script>
         <script src="javascripts/socket.io.js"></script>
-        <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
         <div id="info">
             WEBCAST
             <br/>
-            <span id="resultl"></span>
-            <span id="resultr"></span>
         </div>
-        <img id="videofeed" src="http://192.168.10.1:8080/stream/video.mjpeg" alt="image">
+        <img id="videofeed" src="http://192.168.10.1:8080/stream/video.mjpeg" alt="If you see this message check the availability of video stream">
         <div id="sticksContainer">
             <div id="stick1"></div>
             <div id="stick2"></div>
         </div>
     </body>
     <script type="text/javascript">
-
       //Define refresh interval (in seconds)
       var interval = 1/5;
 
