--- a/index.html
+++ b/index.html
@@ -43,27 +43,29 @@
         limitStickTravel: true,
         stickRadius : 200
       });
-      if (acc == 1){
+      //if (acc == 1){
           window.ondevicemotion =function(event){
             var accelerationX = event.accelerationIncludingGravity.x;  
-            var accelerationY = event.accelerationIncludingGravity.y;  
-            socket.emit('coordinate',{DXL: accelerationX ,DYL: accelerationY });
+            var accelerationY = event.accelerationIncludingGravity.y; 
+            joystickR.deltaX()=0;
+            joystickR.deltaY()=0; 
+            socket.emit('coordinate',{DXL: accelerationX ,DYL: accelerationY,DXR: joystickR.deltaX(),DYR: joystickR.deltaY()});
           }
-      }else{
-        // INTERVAL EVENT
-        setInterval(function(){
-          // If previous value is 0,0
-          if ((joystickL.deltaX() == 0) && (joystickL.deltaY() == 0) && previousIsZero==true){
+      // }else{
+      //   // INTERVAL EVENT
+      //   setInterval(function(){
+      //     // If previous value is 0,0
+      //     if ((joystickL.deltaX() == 0) && (joystickL.deltaY() == 0) && previousIsZero==true){
 
-          }else{
-            socket.emit('coordinate',{DXL: joystickL.deltaX(),DYL: joystickL.deltaY(), DXR: joystickR.deltaX(),DYR: joystickR.deltaY() });
-            if ((joystickL.deltaX() == 0) && (joystickL.deltaY() == 0)){
-              previousIsZero=true;
-            }else {
-              previousIsZero=false; 
-            }
-          }
-        }, interval *1000);
-      }
+      //     }else{
+      //       socket.emit('coordinate',{DXL: joystickL.deltaX(),DYL: joystickL.deltaY(), DXR: joystickR.deltaX(),DYR: joystickR.deltaY() });
+      //       if ((joystickL.deltaX() == 0) && (joystickL.deltaY() == 0)){
+      //         previousIsZero=true;
+      //       }else {
+      //         previousIsZero=false; 
+      //       }
+      //     }
+      //   }, interval *1000);
+      // }
     </script> 
 </html>
