--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         var b = document.getElementById('example'),
             f = document.getElementById('features');
         // o.Y varie de -5 à 5 lors de l'inclinaison de l'iphone (avant basculement de l'écran), on multiplie par 40 pour arriver à 200
-        valY= (o.y)*40;
+        valY= (o.y)* - 40;
       });
 
       // INTERVAL EVENT
