--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript">
       //Define refresh interval (in seconds)
       var interval = 1/10;
-      var acc=true;
+      var acc=false;
       var valY=0;
       var previousIsZero = true;
 
