--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
         var b = document.getElementById('example'),
             f = document.getElementById('features');
         // o.Y varie de -5 à 5 lors de l'inclinaison de l'iphone (avant basculement de l'écran), on multiplie par 40 pour arriver à 200
-        valY= (o.y)* - 40;
+        if (joystickL.deltaY()==0){
+          valY= 0;
+        }else{
+          valY= (o.y)* - 40;
+        }
+        
       });
 
       // INTERVAL EVENT
