--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style/style.css">
+        <link rel="icon" type="image/png" href="cast_favicon.png" />
     </head>
     <body>
         <span id="features"></span></p>
