--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       var valY=0;
       var previousIsZero = true;
       var acc= false;
-      var config = <%= config %>  
+      var config = <%= config %>;
+
+      alert(config);
 
       console.log("Touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
       var socket = io.connect('http://192.168.10.1:3000');
