config file test 24

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       var valY=0;
       var previousIsZero = true;
       var acc= false;
-      var config = <%= nconf %>;
+      var config = <%= config %>;
 
       console.log(config.get('acc_mode'));
 
