--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       var acc= false;
       var config = <%= config %>;
 
-      console.log(config.get('acc_mode'));
+      console.log("SALUT DANIEL");
 
       console.log("Touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
       var socket = io.connect('http://192.168.10.1:3000');
