--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       console.log("SALUT DANIEL");
 
-      console.log("Touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
+      console.log("Touchscreeeeen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
       var socket = io.connect('http://192.168.10.1:3000');
 
       //LEFT Stick
